--- a/Romanian/main/SecurityAdd.apk/res/values-ro/strings.xml
+++ b/Romanian/main/SecurityAdd.apk/res/values-ro/strings.xml
@@ -1,6 +1,9 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
+    <string name="add_done">Adăugare finalizată</string>
     <string name="add_game">Adăugați un joc</string>
+    <string name="add_whitelist">Adăugați în lista excepțiilor</string>
+    <string name="anim_gamebooster_text">Doar o secundă…</string>
     <string name="anti_disturb_msg_detail">Dezactivați toate notificările, cu excepția apelurilor primite</string>
     <string name="anti_disturb_msg_title">Nu deranjați</string>
     <string name="app_name">Extensie serviciu de securitate</string>
@@ -8,17 +11,35 @@
     <string name="application_item_already_permission">Permisă</string>
     <string name="application_item_disable">Restricționată</string>
     <string name="auto_import_games">Mențineți toate jocurile într-un singur loc</string>
+    <string name="boost_done">Accelerare finalizată</string>
     <string name="booster_suc">Viteza a fost crescută cu succes</string>
     <string name="boostering">Se crește viteza…</string>
+    <string name="boosting">Se crește viteza…</string>
     <string name="cancel_button">Renunță</string>
     <string name="close">Închideți</string>
+    <string name="create_shortcut">va crea o comandă rapidă pe Ecranul principal pentru pornire rapidă</string>
+    <string name="dialog_text">va crea o comandă rapidă pe Ecranul principal pentru pornire rapidă</string>
     <string name="dont_bore">"Evitați ca butoanele și notificările să vă distragă atenția"</string>
+    <string name="dont_bore_text">Eliminare mesaje și butoane pentru a nu distrage atenția de la joc</string>
+    <string name="dont_bore_title">Eliminare zgomot de fond</string>
     <string name="empty">" "</string>
+    <string name="function_close">Opriți</string>
     <string name="game_booster">Creștere viteză în jocuri</string>
-    <string name="game_booster_intro">Despre crșterea vitezei în jocuri</string>
+    <string name="game_booster_intro">Despre creșterea vitezei în jocuri</string>
+  <string name="game_booster_title">Boost</string>
     <string name="game_booster_total">Viteza a crescut de %1$s ori, s-a prelungit durata de joc cu %2$s</string>
+    <string name="game_improve_text1">Curățare automată a proceselor din fundal, creștere a memoriei pentru jocuri</string>
+    <string name="game_improve_text2">Curățare automată a proceselor din fundal, creștere a memoriei pentru jocuri； Îmbunătățirea performanței procesorului, creșterea fluenței jocurilor</string>
+    <string name="game_improve_title">Optimizarea performanței</string>
     <string name="game_more_improve">Restricționați activitățile din fundal și viteza de descărcare pentru a economisi acumulatorul și lățimea de bandă pentru jocuri</string>
+    <string name="game_net_text1">Limitarea vitezei de descărcare în fundal, reducerea lagului datorat rețelei</string>
+    <string name="game_net_text2">Creșterea vitezei rețelei și limitarea vitezei de descărcare în fundal, reducerea lagului datorat vitezei rețelei</string>
+    <string name="game_net_title">Protecție rețea</string>
     <string name="game_setting">Setări jocuri</string>
+    <string name="gamebooster_network_dialog_message">Permiteți aplicației de Securitate să se conecteze la rețea pentru a utiliza toate caracteristicile de Creștere a vitezei în jocuri?</string>
+    <string name="gamebooster_network_dialog_title">"Unele caracteristici nu sunt disponibile"</string>
+    <string name="get_sys_info">Obținere informații…</string>
+    <string name="gs_anto_clean_memory_whitelist">Excepții</string>
     <string name="gs_app_back_self_start">Economisire acumulator</string>
     <string name="gs_auto_clean_memory">Goliți memoria cache</string>
     <string name="gs_auto_clean_memory_detail">Goliți memoria cache în mod automat pentru a optimiza experiența în jocuri</string>
@@ -29,11 +50,14 @@
     <string name="gs_game_net_priority">Prioritate conexiune</string>
     <string name="gs_game_net_priority_detail">Limitați viteza de descărcare pentru a avea o lățime de bandă suficientă pentru a putea juca</string>
     <string name="gs_game_performance">Performanță</string>
+    <string name="gs_game_shortcut">Bucurați-vă de o experiență mai fluidă în jocuri</string>
     <string name="gs_only_self_start_for_list">Restricționați procesele din fundal pentru a economisi acumulator necesar jocurilor</string>
     <string name="gs_open_game_booster">Creștere viteză</string>
     <string name="gs_performance_mode">Mod Performanță</string>
     <string name="gs_performance_mode_detail">Creșteți utilizarea procesorului pentru a asigura o performanță crescută</string>
+    <string name="i_know">Știu</string>
     <string name="install_game_count">Au fost adăugate %d jocuri</string>
+    <string name="intro_improve">Bazată pe nivelul sistemului pentru a vă oferi o experiență fulminantă în jocuri</string>
     <string name="loading">Doar o secundă…</string>
   <string name="lucky_result_title">Plicuri roșii</string>
     <string name="main_toolbar_purchase">Adăugați</string>
@@ -59,7 +83,9 @@
     <string name="month_report_warning_dialog_description">"Pentru a vedea raportul lunar, activați această caracteristică din setările aplicației de Securitate."</string>
     <string name="month_report_warning_dialog_positive">Activați</string>
     <string name="month_report_warning_dialog_title">Raport lunar de securitate</string>
+    <string name="net_delay_title">Întârziere</string>
     <string name="network_not_available">"Nu se poate conecta la rețea"</string>
+    <string name="no_game">Niciun joc găsit</string>
     <string name="no_network_btn">Încercați din nou</string>
     <string name="ok_button">OK</string>
     <string name="open_browser">Deschideți în browser</string>
@@ -70,6 +96,8 @@
     <string name="privacy_declare_dialog_title">Termenii serviciului</string>
     <string name="privacy_prompt_traffic_purchase_message">"Numărul dumneavoastră de telefon și detaliile despre operator vor fi criptate și trimise la serverele Mi pentru a obține mai multe informații despre opțiunile de achiții de date."</string>
     <string name="release_memory">Goliți memoria cache</string>
+    <string name="save_energy_text">Se împiedică pornirea automată și sincronizarea datelor aplicațiilor în fundal, se controlează memoria de operare și se reduce utilizarea acumulatorului pentru celelalte aplicații</string>
+    <string name="save_energy_title">Optimizare consum de energie</string>
     <string name="scan_installed_games">Se verifică jocurile instalate…</string>
     <string name="setting">Setări</string>
     <string name="share">Partajați</string>
@@ -78,8 +106,12 @@
     <string name="start">Start</string>
     <string name="start_game">Start</string>
     <string name="support_game_booster_tips">Creșteți viteza și îmbunătățiți experiența de joc</string>
+    <string name="sys_cpu_title">Utilizare procesor</string>
+    <string name="sys_freememory_title">Disponibilă</string>
     <string name="title_share_link">Partajați legătura web</string>
     <string name="top_game">Jocuri de top</string>
+    <string name="top_load_fail_detail">"Nu s-a putut încărca; atingeți pentru a încerca din nou"</string>
+    <string name="top_no_network_detial">"Nu s-a putut încărca; verificați conexiunea la rețea și reîncercați"</string>
     <string name="uninstall_game_count">"Nu au fost adăugate %d jocuri"</string>
     <string name="usage_sorted_loading_text">Doar o secundă…</string>
     <string name="wlan_change_protection_detail">"Nu comuta în mod automat pe Wi-Fi atunci când se utilizează datele mobile"</string>
