--- a/Romanian/main/Mms.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Mms.apk/res/values-ro/strings.xml
@@ -308,7 +308,7 @@
     <string name="mx_activate_hint_sim_change">Operatorul dvs. poate percepe taxe pentru un mesaj SMS trimis pentru a reactiva Mesagerie Mi.</string>
     <string name="mx_activate_int_hint_malformed_info">Operatorul dvs. poate percepe taxe pentru un mesaj SMS internaţional trimis pentru a reactiva Mesagerie Mi.</string>
     <string name="mx_activate_int_hint_server">Operatorul dvs. poate percepe taxe pentru un mesaj SMS internaţional trimis pentru a reactiva Mesagerie Mi.</string>
-    <string name="mx_activate_int_hint_sim_change">Se pare că aţi schimbat cartelele SIM. Operatorul dvs. poate percepe taxe pentru un mesaj SMS internaţional trimis pentru a reactiva Mesagerie Mi.</string>
+    <string name="mx_activate_int_hint_sim_change">"Se pare că aţi schimbat cartelele SIM. Operatorul dvs. vă poate taxa pentru un mesaj SMS trimis pentru reactivarea serviciului Mesagerie Mi."</string>
     <string name="mx_activate_status_desc_activating_now">Activare…</string>
     <string name="mx_activate_status_desc_check_net_connection">"Nu s-a putut conecta la rețea"</string>
     <string name="mx_activate_status_desc_fail">"Nu s-a putut activa Mesageria Mi"</string>
