--- a/Romanian/main/Provision.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Provision.apk/res/values-ro/strings.xml
@@ -61,9 +61,9 @@ Vizualizaţi Politica de confidențialitate a tastaturii selectate</string>
     <string name="skip_underline">Omiteţi acest pas</string>
     <string name="summary_not_set">Nu este setat</string>
     <string name="terms_of_use">Termeni și condiții</string>
-    <string name="terms_of_use_label">Confidențialitatea datelor dvs. este foarte importantă pentru noi. Vă rugăm să citiți Termenii și condițiile precum și Politica de confidențialitate pentru a înțelege ce informații colectăm, cum le folosim și ce opțiuni sunt disponibile pentru dvs.
+    <string name="terms_of_use_label">"Confidențialitatea datelor dvs. este foarte importantă pentru noi. Vă rugăm să citiți Termenii și condițiile precum și Politica de confidențialitate pentru a înțelege ce informații colectăm, cum le folosim și ce opțiuni sunt disponibile pentru dvs.
     
-Trebuie să acceptați Condiţiile de utilizare și Politica de confidențialitate înainte de a putea utiliza MIUI. Pe durata activării, serviciile Mi, Localizarea telefonului, componenta de sistem MSA, componenta de sistem MAB și alte componente statistice se vor conecta la internet și vor obține locația dvs.</string>
+Trebuie să acceptați Condiţiile de utilizare și Politica de confidențialitate înainte de a putea utiliza MIUI. Pe durata activării, serviciile Mi, Serviciile Mi de activare SIM, Mi Cloud, Localizarea dispozitivului, modulele Ecranului principal, Serviciul Jocuri,  componentele de sistem MAB și MSA, HybridPlatform și alte componente statistice se vor conecta la internet și vor obține locația dvs."</string>
     <string name="title_fingerprint">Adăugați amprenta</string>
     <string name="user_agreement">Termenii serviciului</string>
     <string name="welcome">Bine aţi venit</string>
