--- a/Romanian/main/SecurityCenter.apk/res/values-ro/strings.xml
+++ b/Romanian/main/SecurityCenter.apk/res/values-ro/strings.xml
@@ -64,6 +64,7 @@ sau introduceţi parola pentru blocarea aplicațiilor"</string>
     <string name="adb_install_reject_notiy">"Nu s-a acordat permisiunea de instalare prin USB a %s"</string>
     <string name="adb_install_reject_notiy_desc">Puteți permite instalarea prin USB din Opțiuni dezvoltator</string>
     <string name="adb_login_xiaomi_account">Conectați-vă mai întâi la contul Mi</string>
+    <string name="add_game_notification_summary">Atingeți pentru a lansa &amp; Creșterea vitezei în jocuri</string>
     <string name="add_miservice_dialog_content">"%s necesită să adăugați MIUI Service Framework în lista excepțiilor.
           Puteți primi notificări de la aplicațiile MIUI și de la alte aplicații."</string>
     <string name="add_miservice_dialog_title">MIUI Service Framework</string>
@@ -114,6 +115,71 @@ sau introduceţi parola pentru blocarea aplicațiilor"</string>
     <string name="app_install_intercept">Blocați instalarea</string>
     <string name="app_install_tips_go_to">Deschideți</string>
     <string name="app_install_tips_install_success">%1$s instalate cu succes</string>
+    <string name="app_maanger_app_uninstalled_toast">Această aplicație este dezinstalată</string>
+    <string name="app_manager_app_lock">Blocarea aplicațiilor</string>
+    <string name="app_manager_app_version_name">Versiune:</string>
+    <string name="app_manager_apps_generatioin">Actualizări</string>
+    <string name="app_manager_apps_generation_summary">Actualizați pentru a utiliza cele mai recente caracteristici</string>
+    <string name="app_manager_appupdate_remind">Notificare despre actualizări</string>
+    <string name="app_manager_bipartition">Aplicații clonate</string>
+    <string name="app_manager_card_permission_title">Permisiuni</string>
+    <string name="app_manager_default_close_summary">Nicio valoare predefinită setată.</string>
+    <string name="app_manager_default_open">Deschide cu aplicația implicită</string>
+    <string name="app_manager_default_open_summary">Ați ales să lansați această aplicație în mod implicit pentru anumite acțiuni.</string>
+    <string name="app_manager_default_open_title">Ștergeți valorile implicite</string>
+    <string name="app_manager_details_electric_title">Acumulator</string>
+    <string name="app_manager_details_storage_title">Stocare</string>
+    <string name="app_manager_details_traffic_title">Utilizare date mobile</string>
+    <string name="app_manager_dlg_cancel">Renunțați</string>
+    <string name="app_manager_dlg_ok">OK</string>
+    <string name="app_manager_force_stop_dlg_text">Dacă forțați oprirea unei aplicații, aceasta se poate comporta necorespunzător.</string>
+    <string name="app_manager_force_stop_dlg_title">Opriți forțat?</string>
+    <string name="app_manager_loading_data">Încărcare date…</string>
+    <string name="app_manager_more_times">Accesată de peste 100.000 ori</string>
+    <string name="app_manager_my_app">Aplicațiile mele</string>
+    <string name="app_manager_not_record">Niciun element aici</string>
+    <string name="app_manager_perm_monitor_make_calls">Efectuare apeluri</string>
+    <string name="app_manager_perm_monitor_read_call_history">Citire istoric de apelare</string>
+    <string name="app_manager_perm_monitor_read_contacts">Citire agendă</string>
+    <string name="app_manager_perm_monitor_read_sms">Citire mesaje SMS</string>
+    <string name="app_manager_perm_monitor_send_sms">Trimitere mesaje SMS</string>
+    <string name="app_manager_permission">Permisiuni ce privesc confidențialitatea (în ultimele 7 zile)</string>
+    <string name="app_manager_permission_call_phone_over">A efectuat mai mult de 100.000 de apeluri</string>
+    <string name="app_manager_permission_manager_title">Permisiuni</string>
+    <string name="app_manager_permission_notify_summary">Notificări în perdeaua de notificări, plutitoare și în Blocarea ecranului</string>
+    <string name="app_manager_permission_notify_title">Notificări</string>
+    <string name="app_manager_permission_power_saving_summary">Economisire acumulator MIUI</string>
+    <string name="app_manager_permission_power_saving_title">Economisire acumulator</string>
+    <string name="app_manager_permission_read_contact_over">A accesat agenda de peste 100.000 de ori</string>
+    <string name="app_manager_permission_read_mms_over">A citit mesajele SMS de peste 100.000 de ori</string>
+    <string name="app_manager_permission_read_record_over">A citit istoricul de apelare de peste 100.000 de ori</string>
+    <string name="app_manager_permission_send_mms_over">A trimis mai mult de 100.000 de SMS-uri</string>
+    <string name="app_manager_permission_startself_summary">Aplicațiile care pornesc în mod automat ocupă memorie RAM și descarcă acumulatorul mai rapid</string>
+    <string name="app_manager_permission_startself_title">Pornire automată</string>
+    <string name="app_manager_power">Permisiuni</string>
+    <string name="app_manager_rebide_wakepath">Restricționați</string>
+    <string name="app_manager_reduce_wakepath_dialog">Minimizați durata de pornire</string>
+    <string name="app_manager_reduce_wakepath_summary">Restricționând pornirea automată se va minimiza durata de pornire. Restricționați pornirea automată pentru %s?</string>
+    <string name="app_manager_reject_count_over">Blocată de peste 100.000 de ori</string>
+    <string name="app_manager_show_detail_infos">Vedeți tot</string>
+    <string name="app_manager_start_by">Lansată de către %s</string>
+    <string name="app_manager_start_count_over">De peste 100.000 de ori</string>
+    <string name="app_manager_stop_wakepath_dialog_summary">Dezinstalați %s pentru a restricționa durata de pornire?</string>
+    <string name="app_manager_stop_wakepath_dialog_title">Restricționați durata de pornire</string>
+    <string name="app_manager_stop_wakepath_dlg_msg_with_xspace_app">Dezinstalarea acestei aplicații va restricționa durata de pornire. Aplicațiile clonate corespunzătoare vor fi dezinstalate de asemenea. Dezinstalați %s?</string>
+    <string name="app_manager_stop_wakepath_success">Restricționată cu succes</string>
+    <string name="app_manager_stop_wp_dialog_cancel">Renunțați</string>
+    <string name="app_manager_stop_wp_dialog_uninstall">Dezinstalați</string>
+    <string name="app_manager_title">Gestionare aplicații</string>
+    <string name="app_manager_uninstall_with_xspace_app_dlg_msg">Aplicațiile clonate corespunzătoare vor fi eliminate împreună cu datele aplicației.</string>
+    <string name="app_manager_uninstall_xspace_app_dlg_msg">Dezinstalarea aplicațiilor clonate va șterge toate datele aplicației.</string>
+    <string name="app_manager_uninstall_xspace_app_dlg_title">Dezinstalați aplicația clonată?</string>
+    <string name="app_manager_unstall_application">Dezinstalați</string>
+    <string name="app_manager_update_label_text">Nou</string>
+    <string name="app_manager_wake_path_card_title">Istoric durată de pornire (2 zile)</string>
+    <string name="app_manager_wakepath_dialog_buttontext">Am înțeles</string>
+    <string name="app_manager_wakepath_dialog_summary">Durata de pornire apare atunci când o aplicație pornește o altă aplicație în fundal. Acest lucru poate descărca acumulatorul și scădea performanța sistemului. MIUI va bloca în mod implicit pornirea altor aplicații în fundal.</string>
+    <string name="app_manager_wakepath_dialog_title">Despre durata de pornire</string>
     <string name="app_mobile">Date</string>
     <string name="app_name">Blocare aplicații</string>
     <string name="app_name_na">Utilizare date</string>
@@ -1111,12 +1177,15 @@ C"&lt;/b&gt;"itiți instrucțiunile care însoțesc router-ul și resetaţi-l la
     <string name="pref_key_half_year_package_value">Dimensiunea pachetului</string>
     <string name="pref_leisure_no_overlay">Activat</string>
     <string name="pref_leisure_not_opened">Dezactivat</string>
+    <string name="pref_leisure_traffic_limit">Atunci când se atinge limita de utilizare</string>
     <string name="pref_manual_adjust">Setaţi manual statistica de utilizare a datelor</string>
     <string name="pref_mi_sim_settings">Setări Mi SIM</string>
     <string name="pref_month_begin_date">Data de resetare a utilizării datelor</string>
     <string name="pref_month_first_day">1</string>
-    <string name="pref_more_traffic_settings">Setări adiţionale</string>
+    <string name="pref_month_traffic_limit">Limita lunară a utilizării datelor</string>
+    <string name="pref_more_settings">Setări suplimentare</string>
     <string name="pref_new_installed_preconfig_title">Setările prestabilite pentru aplicaţiile noi</string>
+    <string name="pref_normal_traffic_limit">Când depășiți planul de date</string>
     <string name="pref_open_adjust_traffic">Actualizaţi utilizarea datelor în fiecare zi, utilizând statistici de la operatorul dvs.</string>
     <string name="pref_operator_not_set">"Nu ați setat operatorul"</string>
     <string name="pref_operator_setting">%1$s%2$s</string>
@@ -1283,6 +1352,7 @@ Pe durata calibrării MIUI va trimite un mesaj text operatorului pentru a obțin
     <string name="scanning_bar_system_title">Scanare sistem…</string>
     <string name="score_pts">%</string>
     <string name="search_input_txt_na">"&lt;font color='#ff0000'&gt;%s&lt;/font&gt;"</string>
+    <string name="search_result_text">"Nu s-a găsit nicio aplicație"</string>
     <string name="section_clear_acc_item_title">"%s. Dacă tot nu există spațiu de stocare suficient, încercați să folosiți aplicația de Curățare."</string>
     <string name="section_security_defend_item_title">Protejați-vă datele cu Blocarea aplicațiilor</string>
     <string name="section_system_item_fixed">Reparat</string>
